# kkappkit

./: .gitignore  CHANGELOG.md  README.md  kkgui.py  pyproject.toml  util.py
_research/: analysis.md  design.md
_research/legacy/sdk/: kkwidget.py  realtime_params.py
_research/prototype/: gpt_gui.py  input.model.json  offline.app.json  submit.ctrlr.json  submit.view.json
_research/prototype/config/: main.app.json
ci/codegen/: kkappkit.kak.json  kkappkit.kakbind.json  kkappkit.kakcomm.json  kkappkit.kakctrl.json
ci/config/: input.model.json
ci/template/: default.app.json  default.kak.json  default.kakbind.json  input.ctrlr.json  input.model.json  input.view.json  offline.kakctrl.json  osc.ctrler.json  rtctrl.view.json  submit.view.json  submit_panel.view.json
ci/ui/: kkguiex.py
demo/character/: app.json  control.py
demo/offline_params/: offline_params.py
demo/oscillator/: app.json  control.py  imp.py
doc/: analysis.md  design.md  imp.md
hello_world/: hello.py
res/template/: form.app.json  offline.app.json  realtime.app.json
src/: base.py  cli.py  imp.py  impl.py  kkappkit.py  kkappkit_cli.py  kkappkit_core.py  kkappkit_imp.py  kkguiex.py
src/config/: kkappkit.kak.json
src/gui/: kkguiex.py
src/template/: app.json  cli.py  default.app.json  default.kak.json  default.kakbind.json  default.kakctrl.json  default.kakform.json  kkappkit.kak.json  offline.kakctrl.json  oneshot.kakbehav.json  osc.kakcomm.json  realtime.kakctrl.json  rtctrl.kakbehav.json  subproc.kakcomm.json
template/src/: cli.py
test/gen_new_app/: test_gen_new_app.py
test/update_app/: test_update_app.py
test_offline_params/: app.json
test_realtime_params/: test_rt.py
(+17 files in other folders)
