[tool.poetry]
name = "kkappkit"
version = "0.6.5"
description = "Code-generator for building small desktop applications with Python and Tkinter"
authors = ["Beinan Li <li.beinan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/kakyoism/kkappkit/"
documentation = "https://github.com/kakyoism/kkappkit/README.md"
keywords = [
    "frontend",
    "ui",
]
packages = [
    { include = "hello_world" },
    { include = "test_offline_params" },
    { include = "test_realtime_params" },
    { include = "*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
kkpyutil = "*"

[tool.poetry.dev-dependencies]
jinja2 = "*"
Pillow = "*"
pytest = "*"
python-osc = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/kakyoism/kkappkit/issues"
